--- a/zad4/hw4_rainbow_student.ipynb
+++ b/zad4/hw4_rainbow_student.ipynb
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "id": "d0728d82",
       "metadata": {
         "id": "d0728d82"
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "id": "e1883162",
       "metadata": {
         "id": "e1883162"
@@ -152,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "id": "97603d29",
       "metadata": {
         "id": "97603d29"
@@ -219,7 +219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "id": "53e147c5",
       "metadata": {
         "id": "53e147c5"
@@ -270,7 +270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "id": "e3fb7c14",
       "metadata": {
         "id": "e3fb7c14"
@@ -309,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "id": "28b71037",
       "metadata": {
         "id": "28b71037"
@@ -387,7 +387,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 56,
       "id": "385a9330",
       "metadata": {
         "id": "385a9330"
@@ -410,6 +410,7 @@
         "            agent.anneal(step)\n",
         "            state = next_state\n",
         "            if step >= args.init_steps:\n",
+        "                print(step)\n",
         "                agent.update()\n",
         "                if (step + 1) % args.target_update_freq == 0:\n",
         "                    agent.update_target()\n",
@@ -985,7 +986,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "89b64c39",
       "metadata": {
         "id": "89b64c39"
@@ -1003,7 +1004,13 @@
         "        \n",
         "    def forward(self, x):\n",
         "        ################\n",
-        "        raise NotImplementedError(\"Put your code here.\")\n",
+        "        joint_value = self.layers(x)\n",
+        "        value = self.value_head(joint_value)\n",
+        "        advantage = self.advantage_head(joint_value)\n",
+        "        advantage_avg = advantage.mean(dim=-1, keepdim=True)\n",
+        "        res = value + advantage - advantage_avg\n",
+        "\n",
+        "        return res\n",
         "        ################\n",
         "    \n",
         "class DuelingDQN(DQN):\n",
@@ -1024,12 +1031,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "3a641e57",
       "metadata": {
         "id": "3a641e57"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Step: 39999 Evaluation reward: 8.46 Samples per second: 999901"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "2.325743599792459"
+            ]
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "agent = DuelingDQN(args)\n",
         "results_dqn4 = train_agent(args, agent)\n",
@@ -1083,14 +1108,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "cBm8-bPtp6do",
       "metadata": {
         "id": "cBm8-bPtp6do"
       },
       "outputs": [],
       "source": [
-        "!wget https://raw.githubusercontent.com/openai/baselines/master/baselines/common/segment_tree.py\n",
+        "#!wget https://raw.githubusercontent.com/openai/baselines/master/baselines/common/segment_tree.py\n",
         "from segment_tree import MinSegmentTree, SumSegmentTree"
       ]
     },
@@ -1115,7 +1140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 64,
       "id": "c9ea6c31",
       "metadata": {
         "id": "c9ea6c31"
@@ -1130,35 +1155,69 @@
         "            tree_capacity *= 2\n",
         "        self.beta = beta \n",
         "        self.alpha = alpha\n",
+        "        \n",
         "        ################\n",
-        "        raise NotImplementedError(\"Put your code here.\")\n",
+        "        self.num = 0\n",
+        "        self.sum_tree = SumSegmentTree(tree_capacity)\n",
+        "        self.min_tree = MinSegmentTree(tree_capacity)\n",
+        "        self.max_priority = 1.0\n",
         "        ################\n",
         "        \n",
         "    def add(self, state, action, reward, next_state, terminal):\n",
         "        ################\n",
-        "        raise NotImplementedError(\"Put your code here.\")\n",
+        "        curr_idx = self.idx\n",
+        "        if not self.full:\n",
+        "            self.num += 1\n",
+        "\n",
+        "        super().add(state, action, reward, next_state, terminal)\n",
+        "        self.sum_tree[curr_idx] = self.max_priority ** self.alpha\n",
+        "        self.min_tree[curr_idx] = self.max_priority ** self.alpha\n",
+        "        \n",
         "        ################\n",
         "                \n",
         "    def sample(self):\n",
         "        ################\n",
-        "        raise NotImplementedError(\"Put your code here.\")\n",
+        "        idx = self.get_idx()\n",
+        "        states = torch.from_numpy(self.states[idx]).to(self.args.device)\n",
+        "        actions = torch.from_numpy(self.actions[idx]).to(self.args.device)\n",
+        "        rewards = torch.from_numpy(self.rewards[idx]).to(self.args.device)\n",
+        "        next_states = torch.from_numpy(self.next_states[idx]).to(self.args.device)\n",
+        "        terminals = torch.from_numpy(self.terminals[idx]).to(self.args.device)\n",
+        "        weights = torch.Tensor([self.calculate_weight(i) for i in idx]).to(self.args.device)\n",
+        "        idx = torch.from_numpy(idx).to(self.args.device)\n",
         "        ################\n",
         "        return states, actions, rewards, next_states, terminals, idx, weights\n",
         "    \n",
-        "    def update_priorities(self, idx, priorities):\n",
+        "    def update_priorities(self, idxs, priorities):\n",
         "        ################\n",
-        "        raise NotImplementedError(\"Put your code here.\")\n",
+        "        for idx, prio in zip(idxs, priorities):\n",
+        "            new_prio = prio ** self.alpha\n",
+        "            self.sum_tree[idx] = new_prio\n",
+        "            self.min_tree[idx] = new_prio\n",
+        "\n",
+        "            self.max_priority = max(self.max_priority, prio)\n",
         "        ################\n",
         "                \n",
         "    def get_idx(self):\n",
         "        ################\n",
-        "        raise NotImplementedError(\"Put your code here.\")\n",
+        "        idxs = np.zeros(self.args.batch_size, dtype=int)\n",
+        "        summed = self.sum_tree.sum()\n",
+        "        avg = summed / self.args.batch_size\n",
+        "        for batch in range(min(self.args.batch_size, self.num)):\n",
+        "            upper_bound = random.uniform(avg * batch, avg * (batch+1))\n",
+        "            idxs[batch] = self.sum_tree.find_prefixsum_idx(upper_bound)\n",
         "        ################\n",
         "        return idxs\n",
         "    \n",
         "    def calculate_weight(self, idx):\n",
         "        ################\n",
-        "        raise NotImplementedError(\"Put your code here.\")\n",
+        "        curr_sum = self.sum_tree.sum()\n",
+        "        curr_min = self.min_tree.min() / curr_sum\n",
+        "        max_w = (curr_min * self.num) ** (-self.beta)\n",
+        "\n",
+        "        sample_prob = self.sum_tree[idx] / curr_sum\n",
+        "        weight = (sample_prob * self.num) ** (-self.beta)\n",
+        "        weight = weight / max_w\n",
         "        ################\n",
         "        return weight"
       ]
@@ -1176,7 +1235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "id": "86de8b40",
       "metadata": {
         "id": "86de8b40"
