5 done, rainbow started

--- a/zad4/hw4_rainbow_student.ipynb
+++ b/zad4/hw4_rainbow_student.ipynb
@@ -387,7 +387,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 112,
       "id": "385a9330",
       "metadata": {
         "id": "385a9330"
@@ -410,7 +410,6 @@
         "            agent.anneal(step)\n",
         "            state = next_state\n",
         "            if step >= args.init_steps:\n",
-        "                print(step)\n",
         "                agent.update()\n",
         "                if (step + 1) % args.target_update_freq == 0:\n",
         "                    agent.update_target()\n",
@@ -986,7 +985,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 67,
       "id": "89b64c39",
       "metadata": {
         "id": "89b64c39"
@@ -1031,7 +1030,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 72,
       "id": "3a641e57",
       "metadata": {
         "id": "3a641e57"
@@ -1041,18 +1040,21 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Step: 39999 Evaluation reward: 8.46 Samples per second: 999901"
+            "Step: 10999 Evaluation reward: -126.29 Samples per second: 137"
           ]
         },
         {
-          "data": {
-            "text/plain": [
-              "2.325743599792459"
-            ]
-          },
-          "execution_count": 19,
-          "metadata": {},
-          "output_type": "execute_result"
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn [72], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m agent \u001b[39m=\u001b[39m DuelingDQN(args)\n\u001b[0;32m----> 2\u001b[0m results_dqn4 \u001b[39m=\u001b[39m train_agent(args, agent)\n\u001b[1;32m      3\u001b[0m download_numpy(\u001b[39m\"\u001b[39m\u001b[39mresults_dqn4\u001b[39m\u001b[39m\"\u001b[39m, results_dqn4)\n\u001b[1;32m      4\u001b[0m results_dqn4\u001b[39m.\u001b[39mmean(\u001b[39m1\u001b[39m)[\u001b[39m-\u001b[39m\u001b[39m10\u001b[39m:]\u001b[39m.\u001b[39mmean()\n",
+            "Cell \u001b[0;32mIn [69], line 21\u001b[0m, in \u001b[0;36mtrain_agent\u001b[0;34m(args, agent)\u001b[0m\n\u001b[1;32m     19\u001b[0m     agent\u001b[39m.\u001b[39mupdate_target()\n\u001b[1;32m     20\u001b[0m \u001b[39mif\u001b[39;00m (step \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m) \u001b[39m%\u001b[39m args\u001b[39m.\u001b[39mevaluate_freq \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m---> 21\u001b[0m     eval_reward \u001b[39m=\u001b[39m agent\u001b[39m.\u001b[39;49mevaluate(args\u001b[39m.\u001b[39;49mevaluate_samples)\n\u001b[1;32m     22\u001b[0m     results[step\u001b[39m/\u001b[39m\u001b[39m/\u001b[39margs\u001b[39m.\u001b[39mevaluate_freq, seed] \u001b[39m=\u001b[39m eval_reward\n\u001b[1;32m     23\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m\\r\u001b[39;00m\u001b[39mStep: \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m Evaluation reward: \u001b[39m\u001b[39m{:.2f}\u001b[39;00m\u001b[39m Samples per second: \u001b[39m\u001b[39m{:}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(step, eval_reward, \u001b[39mint\u001b[39m((step\u001b[39m-\u001b[39margs\u001b[39m.\u001b[39minit_steps)\u001b[39m/\u001b[39m(time\u001b[39m.\u001b[39mtime()\u001b[39m-\u001b[39mstart_time))), end\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m)\n",
+            "Cell \u001b[0;32mIn [6], line 42\u001b[0m, in \u001b[0;36mDQN.evaluate\u001b[0;34m(self, samples)\u001b[0m\n\u001b[1;32m     40\u001b[0m episode_reward \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m     41\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m---> 42\u001b[0m     action \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_action(torch\u001b[39m.\u001b[39;49mtensor(state)\u001b[39m.\u001b[39;49munsqueeze(\u001b[39m0\u001b[39;49m)\u001b[39m.\u001b[39;49mto(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49margs\u001b[39m.\u001b[39;49mdevice), \u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m     43\u001b[0m     next_state, reward, terminal, _ \u001b[39m=\u001b[39m env_test\u001b[39m.\u001b[39mstep(action)\n\u001b[1;32m     44\u001b[0m     episode_reward \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m reward\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
         }
       ],
       "source": [
@@ -1140,7 +1142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 115,
       "id": "c9ea6c31",
       "metadata": {
         "id": "c9ea6c31"
@@ -1157,6 +1159,7 @@
         "        self.alpha = alpha\n",
         "        \n",
         "        ################\n",
+        "        self.eps = 0.00001\n",
         "        self.num = 0\n",
         "        self.sum_tree = SumSegmentTree(tree_capacity)\n",
         "        self.min_tree = MinSegmentTree(tree_capacity)\n",
@@ -1165,13 +1168,14 @@
         "        \n",
         "    def add(self, state, action, reward, next_state, terminal):\n",
         "        ################\n",
-        "        curr_idx = self.idx\n",
         "        if not self.full:\n",
         "            self.num += 1\n",
         "\n",
+        "        max_prio_alpha = self.max_priority ** self.alpha\n",
+        "        self.sum_tree[self.idx] = max_prio_alpha\n",
+        "        self.min_tree[self.idx] = max_prio_alpha\n",
         "        super().add(state, action, reward, next_state, terminal)\n",
-        "        self.sum_tree[curr_idx] = self.max_priority ** self.alpha\n",
-        "        self.min_tree[curr_idx] = self.max_priority ** self.alpha\n",
+        "        \n",
         "        \n",
         "        ################\n",
         "                \n",
@@ -1191,7 +1195,7 @@
         "    def update_priorities(self, idxs, priorities):\n",
         "        ################\n",
         "        for idx, prio in zip(idxs, priorities):\n",
-        "            new_prio = prio ** self.alpha\n",
+        "            new_prio = prio ** self.alpha + self.eps\n",
         "            self.sum_tree[idx] = new_prio\n",
         "            self.min_tree[idx] = new_prio\n",
         "\n",
@@ -1235,7 +1239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 116,
       "id": "86de8b40",
       "metadata": {
         "id": "86de8b40"
@@ -1278,12 +1282,69 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 117,
       "id": "96c9a63d",
       "metadata": {
         "id": "96c9a63d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/home/wladekp/.local/lib/python3.8/site-packages/gym/core.py:317: DeprecationWarning: \u001b[33mWARN: Initializing wrapper in old step API which returns one bool instead of two. It is recommended to set `new_step_api=True` to use new step API. This will be the default behaviour in future.\u001b[0m\n",
+            "  deprecation(\n",
+            "/home/wladekp/.local/lib/python3.8/site-packages/gym/wrappers/step_api_compatibility.py:39: DeprecationWarning: \u001b[33mWARN: Initializing environment in old step API which returns one bool instead of two. It is recommended to set `new_step_api=True` to use new step API. This will be the default behaviour in future.\u001b[0m\n",
+            "  deprecation(\n",
+            "/home/wladekp/.local/lib/python3.8/site-packages/gym/core.py:256: DeprecationWarning: \u001b[33mWARN: Function `env.seed(seed)` is marked as deprecated and will be removed in the future. Please use `env.reset(seed=seed)` instead.\u001b[0m\n",
+            "  deprecation(\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "10000\n",
+            "10001\n",
+            "10002\n",
+            "10003\n",
+            "10004\n",
+            "10005\n",
+            "10006\n",
+            "10007\n",
+            "10008\n",
+            "10009\n",
+            "10010\n",
+            "10011\n",
+            "10012\n",
+            "10013\n",
+            "10014\n",
+            "10015\n",
+            "10016\n",
+            "10017\n",
+            "10018\n",
+            "10019\n",
+            "10020\n",
+            "10021\n",
+            "10022\n"
+          ]
+        },
+        {
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn [117], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m agent \u001b[39m=\u001b[39m PrioritizedDQN(args)\n\u001b[0;32m----> 2\u001b[0m results_dqn5 \u001b[39m=\u001b[39m train_agent(args, agent)\n\u001b[1;32m      3\u001b[0m download_numpy(\u001b[39m\"\u001b[39m\u001b[39mresults_dqn5.npy\u001b[39m\u001b[39m\"\u001b[39m, results_dqn5)\n\u001b[1;32m      4\u001b[0m results_dqn5\u001b[39m.\u001b[39mmean(\u001b[39m1\u001b[39m)[\u001b[39m-\u001b[39m\u001b[39m10\u001b[39m:]\u001b[39m.\u001b[39mmean()\n",
+            "Cell \u001b[0;32mIn [112], line 18\u001b[0m, in \u001b[0;36mtrain_agent\u001b[0;34m(args, agent)\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[39mif\u001b[39;00m step \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m args\u001b[39m.\u001b[39minit_steps:\n\u001b[1;32m     17\u001b[0m     \u001b[39mprint\u001b[39m(step)\n\u001b[0;32m---> 18\u001b[0m     agent\u001b[39m.\u001b[39;49mupdate()\n\u001b[1;32m     19\u001b[0m     \u001b[39mif\u001b[39;00m (step \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m) \u001b[39m%\u001b[39m args\u001b[39m.\u001b[39mtarget_update_freq \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     20\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mtarget\u001b[39m\u001b[39m\"\u001b[39m, step)\n",
+            "Cell \u001b[0;32mIn [116], line 20\u001b[0m, in \u001b[0;36mPrioritizedDQN.update\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39moptimizer\u001b[39m.\u001b[39mstep()\n\u001b[1;32m     19\u001b[0m priorities \u001b[39m=\u001b[39m td_errors\u001b[39m.\u001b[39mdetach()\u001b[39m.\u001b[39msqueeze()\u001b[39m.\u001b[39mcpu()\u001b[39m.\u001b[39mtolist()\n\u001b[0;32m---> 20\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbuffer\u001b[39m.\u001b[39;49mupdate_priorities(idx, priorities)\n",
+            "Cell \u001b[0;32mIn [115], line 48\u001b[0m, in \u001b[0;36mPrioritizedBuffer.update_priorities\u001b[0;34m(self, idxs, priorities)\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[39mfor\u001b[39;00m idx, prio \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(idxs, priorities):\n\u001b[1;32m     47\u001b[0m     new_prio \u001b[39m=\u001b[39m prio \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39malpha \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39meps\n\u001b[0;32m---> 48\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msum_tree[idx] \u001b[39m=\u001b[39m new_prio\n\u001b[1;32m     49\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmin_tree[idx] \u001b[39m=\u001b[39m new_prio\n\u001b[1;32m     51\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmax_priority \u001b[39m=\u001b[39m \u001b[39mmax\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmax_priority, prio)\n",
+            "File \u001b[0;32m~/gsn/zad4/segment_tree.py:81\u001b[0m, in \u001b[0;36mSegmentTree.__setitem__\u001b[0;34m(self, idx, val)\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_value[idx] \u001b[39m=\u001b[39m val\n\u001b[1;32m     80\u001b[0m idx \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m\u001b[39m=\u001b[39m \u001b[39m2\u001b[39m\n\u001b[0;32m---> 81\u001b[0m \u001b[39mwhile\u001b[39;00m idx \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m     82\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_value[idx] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_operation(\n\u001b[1;32m     83\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_value[\u001b[39m2\u001b[39m \u001b[39m*\u001b[39m idx],\n\u001b[1;32m     84\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_value[\u001b[39m2\u001b[39m \u001b[39m*\u001b[39m idx \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m]\n\u001b[1;32m     85\u001b[0m     )\n\u001b[1;32m     86\u001b[0m     idx \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m\u001b[39m=\u001b[39m \u001b[39m2\u001b[39m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ],
       "source": [
         "agent = PrioritizedDQN(args)\n",
         "results_dqn5 = train_agent(args, agent)\n",
@@ -1342,22 +1403,92 @@
         "        self.beta = beta   \n",
         "        self.memories = deque(maxlen=nstep)\n",
         "        self.nstep = nstep \n",
+        "        self.discount = args.discount\n",
         "        \n",
         "    def add(self, state, action, reward, next_state, terminal):\n",
         "        ################\n",
-        "        raise NotImplementedError(\"Put your code here.\")\n",
+        "        terminal_ = 1 if terminal else 0 \n",
+        "        memory = (state, action, reward, next_state, terminal_)\n",
+        "        self.memories.append(memory)\n",
+        "        if len(self.memories) >= self.nstep:\n",
+        "            state, action, reward, next_state, terminal = self.get_nstep()\n",
+        "            self.states[self.idx, :] = state\n",
+        "            self.actions[self.idx, :] = action\n",
+        "            self.rewards[self.idx, :] = reward\n",
+        "            self.next_states[self.idx, :] = next_state\n",
+        "            self.terminals[self.idx, :] = terminal\n",
+        "\n",
+        "            max_prio_alpha = self.max_priority ** self.alpha\n",
+        "            self.sum_tree[self.idx] = max_prio_alpha\n",
+        "            self.min_tree[self.idx] = max_prio_alpha\n",
+        "\n",
+        "            self.idx += 1\n",
+        "            if self.idx == self.args.capacity:\n",
+        "                self.full = True\n",
+        "                self.idx = 0\n",
         "        ################\n",
+        "\n",
+        "    def get_nstep(self):\n",
+        "        reward = 0\n",
+        "        terminal = 0\n",
+        "        curr_dicount = 1\n",
+        "\n",
+        "        for (mem_state, mem_action, mem_reward, mem_next_state, mem_terminal) in self.memories:\n",
+        "            reward += mem_reward * curr_dicount\n",
+        "            curr_dicount *= self.discount\n",
+        "            next_state = mem_next_state\n",
+        "            if mem_terminal:\n",
+        "                terminal = 1\n",
+        "                break\n",
+        "        \n",
+        "        (state, action, _, _, _) = self.memories.popleft()\n",
+        "        return state, action, reward, next_state, terminal\n",
         "                \n",
         "    def sample(self):\n",
         "        ################\n",
-        "        raise NotImplementedError(\"Put your code here.\")\n",
+        "        idx = self.get_idx()\n",
+        "        states = torch.from_numpy(self.states[idx]).to(self.args.device)\n",
+        "        actions = torch.from_numpy(self.actions[idx]).to(self.args.device)\n",
+        "        rewards = torch.from_numpy(self.rewards[idx]).to(self.args.device)\n",
+        "        next_states = torch.from_numpy(self.next_states[idx]).to(self.args.device)\n",
+        "        terminals = torch.from_numpy(self.terminals[idx]).to(self.args.device)\n",
+        "        weights = torch.Tensor([self.calculate_weight(i) for i in idx]).to(self.args.device)\n",
+        "        idx = torch.from_numpy(idx).to(self.args.device)\n",
         "        ################\n",
         "        return states, actions, rewards, next_states, terminals, idx, weights\n",
         "    \n",
         "    def update_priorities(self, idx, priorities):\n",
         "        ################\n",
-        "        raise NotImplementedError(\"Put your code here.\")\n",
-        "        ################"
+        "        for idx, prio in zip(idx, priorities):\n",
+        "            new_prio = prio ** self.alpha + self.eps\n",
+        "            self.sum_tree[idx] = new_prio\n",
+        "            self.min_tree[idx] = new_prio\n",
+        "\n",
+        "            self.max_priority = max(self.max_priority, prio)\n",
+        "        ################\n",
+        "\n",
+        "    def get_idx(self):\n",
+        "        ################\n",
+        "        idxs = np.zeros(self.args.batch_size, dtype=int)\n",
+        "        summed = self.sum_tree.sum()\n",
+        "        avg = summed / self.args.batch_size\n",
+        "        for batch in range(min(self.args.batch_size, self.num)):\n",
+        "            upper_bound = random.uniform(avg * batch, avg * (batch+1))\n",
+        "            idxs[batch] = self.sum_tree.find_prefixsum_idx(upper_bound)\n",
+        "        ################\n",
+        "        return idxs\n",
+        "    \n",
+        "    def calculate_weight(self, idx):\n",
+        "        ################\n",
+        "        curr_sum = self.sum_tree.sum()\n",
+        "        curr_min = self.min_tree.min() / curr_sum\n",
+        "        max_w = (curr_min * self.num) ** (-self.beta)\n",
+        "\n",
+        "        sample_prob = self.sum_tree[idx] / curr_sum\n",
+        "        weight = (sample_prob * self.num) ** (-self.beta)\n",
+        "        weight = weight / max_w\n",
+        "        ################\n",
+        "        return weight"
       ]
     },
     {
